--- a/_posts/2022-05-11-VOCUS-ep.32-繪畫生活-揭開展覽的真正功能.-戰火下的烏克蘭畫家-成人繪本-a-ft.-relish.html
+++ b/_posts/2022-05-11-VOCUS-ep.32-繪畫生活-揭開展覽的真正功能.-戰火下的烏克蘭畫家-成人繪本-a-ft.-relish.html
@@ -23,8 +23,5 @@ author: 泰太
 </ol>
 <div class="draft-block draft--p left">點集連結收聽 → <a href="https://open.firstory.me/story/cl2vznzc302jw01xrgt88aga6/platforms" target="_blank" class="draft--a">https://open.firstory.me/story/cl2vznzc302jw01xrgt88aga6/platforms</a></div>
 <div class="draft-block draft--p left">或選擇以下你慣用的平台收聽 ↓</div>
-<div class="embed-block-prerender" data-url="https://open.firstory.me/story/cl2vznzc302jw01xrgt88aga6/platforms"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:2160px" class="image-block-prerender" data-src="https://images.vocus.cc/202a0283-a072-4502-9b26-147f52546bc5.png" data-width="2160" data-height="2160" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Photo Credit : Relish's Illustration</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<iframe src="https://open.firstory.me/story/cl2vznzc302jw01xrgt88aga6/platforms"></iframe>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/202a0283-a072-4502-9b26-147f52546bc5.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Photo Credit : Relish's Illustration</figcaption></div>
