--- a/_posts/2022-05-11-VOCUS-繁體漢字-翻譯爲-english-應該是什麼.html
+++ b/_posts/2022-05-11-VOCUS-繁體漢字-翻譯爲-english-應該是什麼.html
@@ -8,16 +8,13 @@ tags: blog
 author: 羅聖爾
 ---
 
-<div class="draft--imgNormal draft-block"><div><div style="height:1440px" class="image-block-prerender" data-src="https://images.vocus.cc/b202a587-9434-4c2b-867c-a3d5177d9e52.jpg" data-width="1440" data-height="760" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/b202a587-9434-4c2b-867c-a3d5177d9e52.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <h3 class="draft-block draft--h3" name="header-5v6cv"><span style="font-weight: bold; ">一、「繁體漢字」即 Formal Hanese<br></span></h3>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">繁體漢字 = Formal Hanese = 式正的漢字 = 正體漢字 or 正式漢字</span>，其中 Formal 有「式正的」之意，同時字首 F 也能同時約略形聲漢語「繁」的起音。</div>
 <div class="draft-block draft--p left">一般人將「繁體漢字」的「繁體」轉譯爲 traditional (傳統的；傳統式樣的；傳統形樣的；傳遞因襲的；傳遞昔有的) 可能是不太對勁的；因爲，「繁體」不一定就是「傳統」，尤其是源自殷商甲骨文的漢字，字體在數千年中歷經多向度的演變，那麼在眾多變體的字體中，那一種變體纔算是傳統呢？……其實很難定義吧！</div>
 <div class="draft-block draft--p left">也就是說，漢字「傳統」與「繁」兩者的意思其實沒直接相關；但是，從漢字成語「繁文縟節」用以形容某種正式的禮節來看，「繁」卻可能同時與「複雜」、「綿密」、「豐富」及「正式」、「正文」的概念相關。<span style="font-weight: bold; ">(P.S. 漢字「縟」在《說文解字》中有「繁采色」或「繁采飾」之意，即類似「繁華」之意，也和「繁」字的概念相關，又可能帶有「綿密的rule」即類似「綿密的律規寸法」、「細緻的履律法則」之內涵。)</span></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-2998l"><span style="font-weight: bold; ">二、「繁體漢字」即 Formosa Hanese 或 Formosan Hanese<br></span></h3>
 <div class="draft-block draft--p left">此外，由於 formal 一字內含的 form 有時又被引申爲「感覺良好的健康狀態」之意，可能是因爲其中的字母 o 又有象徵完整或圓滿的可能，其中的 for 也可能通過 f 或 fo 的上下組合約略象徵漢字「子」的象形文、r 則約略形聲台閩語「女」的起音而使得 for 足以轉換漢字「好」，那也就使得 form 有「好貌」或「好樣」或「好樣模」之意，甚至 form 的發音念快ㄧ點也有點略似台閩語「好」或客家話「和」的感覺呢！</div>
 <div class="draft-block draft--p left">所以，基於 formal 內含的 form 可能同時帶有「完整」的含意，那麼有別於「簡化漢字」(Simplified Hanese) 的「繁體漢字」(Formal Hanese) 也可能說是 <span style="font-weight: bold; ">Formosa Hanese</span> 或 <span style="font-weight: bold; ">Formosan Hanese</span>，正因爲 Formosa 一語也帶有「完整」的概念，不只是一般人所說的「美麗」或「美麗島」這一類的意思而已。<span style="font-weight: bold; ">(P.S. 其中 Hanese 即「漢之字」或「漢字」之意，也有「漢之言說」、「漢文」、「漢語」、「漢話」、「漢人」、「漢民」、「漢族」、「漢的」、「漢之」等類似含意，或意通 Han - 漢；漢人；漢聯，意通「漢族」；漢言，包括「漢文」、「漢字」、「漢語」；漢之；漢的。)</span></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-5num9"><span style="font-weight: bold; ">P.S.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">formal：形正</span>，類似「正式」或「正式的」之意，其中字尾 <span style="font-weight: bold; ">al = A丨= 夊一 = 止一 = 正；形正</span>，其中字尾 <span style="font-weight: bold; ">al = A零 = 夊〇 = 止口 = 正</span>，此時符號「止口」的下上組合是約略描述漢字「正」的殷商甲骨文字體，不過其中「夊〇」若通過「<span style="font-weight: bold; ">夊〇 = 止o = 止one = 止一 = 正</span>」也能轉換後世由符號「止一」下上組合的字體<span style="font-weight: bold; ">；形正樣容</span>，此時字尾 al 同時約略形聲漢語「樣容」再轉音<span style="font-weight: bold; ">；形正的、形貌正</span>，此時 informal 即「沒形正」、「沒形正樣容」、「沒形正的」或「沒形貌正」之意，類似「非正式的」<span style="font-weight: bold; ">；式正</span>，此時 <span style="font-weight: bold; ">fomal = －ΓonnA一 = －Lo聯N夊一 = －㇂ooZ止一 = －㇂dot.one.2正 = －㇂點1二正 = －㇂丶丨二正= －㇂丶工正 = 式正；式正的、式正樣容、式正一類</span>，此時字尾 al 同許多形容詞語意的單字字尾 al 轉換漢字「的」或「樣容」或「一類」等。</div>
-<div class="draft-block draft--p left"></div>
