--- a/_posts/2022-05-11-VOCUS-購買代替認養-鍾明軒買狗的幾個好理由.html
+++ b/_posts/2022-05-11-VOCUS-購買代替認養-鍾明軒買狗的幾個好理由.html
@@ -8,7 +8,6 @@ tags: blog
 author: 曾友俞
 ---
 
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">致謝 上報 刊登本文：https://www.upmedia.mg/news_info.php?Type=2&SerialNo=144235</div>
 <div class="draft-block draft--p left">網路紅人鍾明軒在最新的影片中宣佈自己要養狗了，但這不只是個記錄生活的VLog，在影片的開始就將「領養代替購買」給批評一番，基本上影片的論點是以他本人身邊的名人們明明是買狗卻說自己是領養的、領養代替購買變成只能領養不能購買、這句標語成為道德至高審視點以情緒勒索、人是自由可以選擇領養或購買、問題出在棄養而非購買、繁殖場分有合法優質與黑心惡劣、人都有所偏好既然可以選擇配偶當然可以選擇寵物、有人的需求需要品種狗貓。</div>
 <div class="draft-block draft--p left">整理如上的論點可供檢驗與影片是否相符，並且在這裡先指出影片中他購買了一種品種白柴犬。於是我們可以先想想，究竟這是一個為了迴護自身購買行為射箭再畫靶的粉飾？或者，是先慎思過購買與領養間的道德行為差異才做出的行動？畢竟這位表演者時常告訴他的觀眾們「思辨」這件事有多重要。</div>
@@ -27,9 +26,5 @@ author: 曾友俞
 <div class="draft-block draft--p left">但是，就這部人氣作品而言，公司的商業行銷有其考量，避免沾染政治議題是商業上的理性做法，可說無錯之有，且對自身被取消工作（這裡姑且不論契約成立與否，畢竟爭論雙方各執一詞，也並未有於各媒體上更多的事證可供判斷）的臆測是因為自身的性氣質。</div>
 <div class="draft-block draft--p left">然而，這不正是以自身的身分認同為道德高地，即便配音的結果與專業配音員有懸殊的落差（有實際配音影片對比），卻只因該角色「魘夢性格惡劣、將他人痛苦當樂趣、聲音陰柔怪裡怪氣」（據表演者自身對該角色之描述），就認為自己「本該是我配音的」，並於遭否決後發出影片公審的情緒勒索嗎？</div>
 <div class="draft-block draft--p left">當然，在當代的政治正確與身分政治下，具有特定身分認同者，不只是自身，甚至可能是社會主流價值，將會予以肯認無論任何行為。也於是乎，越是我行我素，無論是非對錯即便雙標，也將都會有一定的支持。但我們究竟想要生活在其中的是什麼樣的社會？</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1652px" class="image-block-prerender" data-src="https://images.vocus.cc/3ec92da1-2a21-44bb-88d8-7be46e82a75d.png" data-width="1652" data-height="1146" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/3ec92da1-2a21-44bb-88d8-7be46e82a75d.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">photo source：https://www.upmedia.mg/news_info.php?Type=2&SerialNo=144235</div>
