--- a/_posts/2022-03-31-VOCUS-ep.30-疫起生活-掰掰pandemic-哈囉endemic-無咧驚ㄟ泰國人.html
+++ b/_posts/2022-03-31-VOCUS-ep.30-疫起生活-掰掰pandemic-哈囉endemic-無咧驚ㄟ泰國人.html
@@ -13,7 +13,7 @@ author: 泰太
 <div class="draft-block draft--p left">不僅如此，<br>政府還正式宣布在從今年7月開始，<br>要把被全球列為pandemic的肺炎病毒，<br>正式列為endemic(地方性疾病)，從7/1開始喔！</div>
 <div class="draft-block draft--p left">回首這一年來的起起落落，<br>從知道身邊第一個人開始確診後的害怕，<br>到現在每天都聽到誰誰誰確診後的淡定。</div>
 <div class="draft-block draft--p left">疫起生活，你準備好了嗎？</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:5472px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1585912812840-b457972f28d0?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDU2fHxjb3ZpZCUyMDE5fGVufDB8fHx8MTY0ODcwOTkzMA&ixlib=rb-1.2.1&q=85" data-width="5472" data-height="3648" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.unsplash.com/photo-1585912812840-b457972f28d0"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <blockquote class="draft-block draft--blockquote">嗨，你好，我是泰太，一個不小心跑到泰國就待了八年的怪咖。在這裡，我會用太太視角與你分享奇妙的文化，脫離好熱好辣好便宜的泰國，我想用真實生活，與你聊一聊。歡迎收聽泰太太想說~</blockquote>
 <div class="draft-block draft--p left">好久不見了，又過了一個多月，大家的疫情生活還好嗎？是否已經習慣了病毒的存在呢？時至今日也已經兩年多了。今天我剛好在回首去年的此刻，去年3月底的大爆發，而這個爆發的起點呢？我在<a href="https://open.firstory.me/story/cknu3edr5k3bg0856uf2o8ht9/platforms" target="_blank" class="draft--a">第24集桃色交易捲出的防疫風波與酒店內幕│我們就這樣騎著車...</a>當中有提過。</div>
 <div class="draft-block draft--p left">一名女子在臉書的公開貼文竟捲出了軒然大波！彷彿像是潘朵拉的盒子被打開，許多醜惡就這樣嘩啦啦的，如同潑水節的水一樣被潑灑出來。究竟是什麼樣的女子？讓許多在上流社會的Hi So人士緊張兮兮？</div>
@@ -27,7 +27,7 @@ author: 泰太
 <div class="draft-block draft--p left">其實，我身邊有很多人都確診，從學生、然後鄰居以及家人等等都有。在這樣的狀態下，政府宣布升4級警戒同時又鬆綁路徑管制。目前的生活好像慢慢地走向了以前的正常生活，但所謂正常的樣子又是什麼呢？</div>
 <h2 class="draft-block draft--h2" name="header-44fe7">★ 點擊<a href="https://open.firstory.me/story/cl14nktpd00np0hvx3fd71uws/platforms" target="_blank" class="draft--a">連結</a>收聽</h2>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">Podcast </span><a href="https://open.firstory.me/user/taicountry/platforms" target="_blank" class="draft--a">泰太太想說 </a><br><span style="font-weight: bold; ">Instargram  </span><a href="https://www.instagram.com/taicountry/" target="_blank" class="draft--a">@taicountry</a></blockquote>
-<div class="draft--imgNormal draft-block"><div><div style="height:2160px" class="image-block-prerender" data-src="https://images.vocus.cc/cc1803d9-f3a5-407f-95f3-7b39e7642c8c.png" data-width="2160" data-height="2160" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/cc1803d9-f3a5-407f-95f3-7b39e7642c8c.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">內容補充→【Vision Thai看見泰國】的街訪影片</div>
 <ol>
   <li class="draft-block draft--li">泰國人與病毒共存，你的感覺是什麼呢？</li>
@@ -36,6 +36,4 @@ author: 泰太
   <li class="draft-block draft--li">你會贊成完整，接踵疫苗入境就免隔離嗎？</li>
   <li class="draft-block draft--li">如果以後出國都免隔離了，你最想要去的國家是哪裡嗎？</li>
 </ol>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=EqFOU8JW1HQ"></div>
-<div class="draft-block draft--p left"></div>
+<iframe src="https://www.youtube.com/embed/EqFOU8JW1HQ" width="720px" height="360px"></iframe>
