--- a/_posts/2022-05-11-VOCUS-無論是俄烏戰爭或是台海戰爭對美國來說都-不算壞事-的理由.html
+++ b/_posts/2022-05-11-VOCUS-無論是俄烏戰爭或是台海戰爭對美國來說都-不算壞事-的理由.html
@@ -8,4 +8,27 @@ tags: blog
 author: 波波先生
 ---
 
-<p><br></p>
+<h3>軍需產業從中獲益，拜登政權會複製「烏克蘭作法」嗎？</h3>
+<p>原文發佈日期：2022.4.14        
+<br>原文作者：北村 淳  
+<br>授權翻譯：波波先生</p>
+<img src="https://images.vocus.cc/0978ae6e-568e-4f65-b9ce-f57329483045.webp" alt="通力動力公司開發，雷神科技製造的便攜式防空導彈。以美國為首的NATO各國提供此武器給烏克蘭（照片：美國海軍陸戰隊）">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">通力動力公司開發，雷神科技製造的便攜式防空導彈。以美國為首的NATO各國提供此武器給烏克蘭（照片：美國海軍陸戰隊）</figcaption>
+<p>（北村 淳：軍事社會研究學者）</p>
+<p>在不遠的未來，現在正在進行的俄烏戰爭，恐怕將會發展成中國對台灣的台海之戰。</p>
+<p>但是，簡單的將烏克蘭侵略與台灣侵略混為一談是錯誤的。</p>
+</p>雙方在結構上雖然存在許多共通點，但探究發動侵略一方國家的動機，從民族、宗教、文化、政治、經濟等觀點來看，根本上引發戰爭的原因是大不相同的。不只如此，俄羅斯與烏克蘭國土接壤，中國與台灣卻不存在陸地上的國界。這也代表著，由於地形條件的差異，攻勢發動的型態與發展也將會完全不同。</p>
+<p>另一方面，兩場衝突最大的共通點在於，發動侵略國（俄羅斯與中國）雙方都是試圖削弱美國勢力的國家。從拜登政權試圖維持美國霸權的觀點上來看，面對與這兩大國的宿命之戰，美國極有可能會使用類似的解決策略。</p>
+<h3>由於俄烏之戰美國軍需產業獲益</h3>
+<p>由於美國是世界最大的軍需出口國（註），在俄烏之戰開打後，拜登政權持續加強對烏克蘭在武器方面的支援，可以想見美國軍需產業暫時將會一片榮景。實際上，美國主要的軍需企業股價在俄烏戰之後急衝直上（除了波音因為新冠肺炎影響民航機部門大虧損之外）。</p>
+<p>（註）2016年～2020年的5年當中，美國佔全世界的武器出口約4成。後面緊接著是俄羅斯佔20％、法國佔8％、德國佔6％、中國佔5％。</p>
+<img src="https://images.vocus.cc/a99d9081-5435-45a8-b897-1c82f31ae4c5.jpg">
+<p>美國實際上控制的，是以這些軍需企業為首的巨大資本與政治勢力（與川普不同，拜登本身就是最大的政治勢力代表）。</p>
+<p>美國在俄烏戰爭開打之前，就已經對烏克蘭實施軍事上的支援（光是2021年，拜登政府對烏克蘭的軍需支援就達到6億5千萬美元）。也就是說，美國增加了武器與軍需物資的供給，並派遣軍事顧問團等，強化烏克蘭軍、民兵組織（包括標榜白人至上主義的民兵組織、新納粹等）的戰鬥能力。</p>
+<p>同時，美國對NATO成員國以及歐洲其他關係較好的國家（對軍事採取中立政策的瑞典、芬蘭等國），不斷發出「周邊國家將會成為下一個烏克蘭」等消息，試圖將恐懼植入各國的情報戰。</p>
+<p>於此同時，拜登政權表現出推動烏克蘭加入NATO。烏克蘭是俄羅斯最提防也最痛恨的國家，此行動直接引起普丁的不滿。而拜登政權藉由「烏克蘭門」來轉移國內輿論焦點的作法，目前來看雖然還無法確認是否收到功效，但俄羅斯確實因此對烏克蘭發起攻勢。</p>
+<p>由於俄烏之戰爆發，過去歐洲各國一直樂觀的認為「在21世紀的今天，歐洲的土地上怎麼可能還會發生流血戰爭」。但同時，NATO諸國與非軍事同盟國之間，確實也對美國主導的NATO所握有的軍事力量，充滿信心。</p>
+<h3>不參加戰爭而強化軍事地位霸權</h3>
+<p><a href="https://jbpress.ismedia.jp/articles/-/70009?page=3">（繼續閱讀......）</a> （※由於JBpress翻譯版權，請點選開啟閱讀全文）</p>
+<p>有興趣的朋友或其他相關文章歡迎訂閱我的<a href="https://vocus.cc/jpview/home">《日本媒體國際觀點》</a></p>
+
