--- a/_posts/2022-05-11-PQ-台美關係升溫共軍就來台-國防部-能完全能掌握中共軍事活動.html
+++ b/_posts/2022-05-11-PQ-台美關係升溫共軍就來台-國防部-能完全能掌握中共軍事活動.html
@@ -24,7 +24,7 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/619d0481-共軍昨進入我方西南領空。圖／國防部。.jpg" alt="" class="wp-image-100911" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/619d0481-共軍昨進入我方西南領空。圖／國防部。.jpg 880w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/619d0481-共軍昨進入我方西南領空。圖／國防部。-300x224.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/619d0481-共軍昨進入我方西南領空。圖／國防部。-768x573.jpg 768w" sizes="(max-width: 880px) 100vw, 880px" /><figcaption>共軍昨進入我方西南領空。圖／國防部。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/619d0481-共軍昨進入我方西南領空。圖／國防部。.jpg" alt="" class="wp-image-100911" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/619d0481-共軍昨進入我方西南領空。圖／國防部。.jpg 880w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/619d0481-共軍昨進入我方西南領空。圖／國防部。-300x224.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/619d0481-共軍昨進入我方西南領空。圖／國防部。-768x573.jpg 768w" sizes="(max-width: 880px) 100vw, 880px" /><figcaption>共軍昨進入我方西南領空。圖／國防部。</figcaption></figure></div>
 
 
 
