--- a/_posts/2022-05-12-INITIUM-先行者胡台丽-人类学与台湾-她拿著笔记本-只身进入无人知晓之境.html
+++ b/_posts/2022-05-12-INITIUM-先行者胡台丽-人类学与台湾-她拿著笔记本-只身进入无人知晓之境.html
@@ -10,7 +10,7 @@ author: 特约撰稿人 朱嘉汉 发自台北
 
 <p>「胡台丽关于“我是谁”的漫长思索与回应，这也是所有台湾人，不论任何族群都会遇上的问题。」</p><p>特约撰稿人 朱嘉汉 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220512-culture-hu-tai-li-obituary/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/f729d645db8c4ceeb7534a34df033cd7.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2019年7月，胡台丽出席一个TEDx讲座。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2019年7月，胡台丽出席一个TEDx讲座。<span class="credit">影片截图</span></figcaption></figure><p><small>【编者按】台湾人类学家胡台丽（1950-2022）于5月7日逝世，她曾担任台湾中央研究院民族学研究所所长，亦是台湾重要的纪录片导演，民族志纪录片先驱。我们邀请作家朱嘉汉撰文，述往与哀悼。</small></p>
-<p>​<small>朱嘉汉：1983年生，作家。曾就读法国高等社会科学院社会学博士班，现为台北艺术大学兼任讲师。著有长篇小说《礼物》、《里面的里面》等。</small></p>
+<p><small>朱嘉汉：1983年生，作家。曾就读法国高等社会科学院社会学博士班，现为台北艺术大学兼任讲师。著有长篇小说《礼物》、《里面的里面》等。</small></p>
 <p>对于一个像我这样，在公元两千年左右就读人类学这冷门科系的学生而言，胡台丽的身影，象征的是人类学这门知识更为宽广且平易近人的学科的出路。这些出路（是的，她告诉我们不只一条），不仅能亲近更多的读者、观众，且不牺牲掉人类学最可贵的特质。即，能在理解时，不化约、不刻板化他者。并时时维持著自省的态度，谦逊的尊重每个文化的独特性。</p>
 <p>​若近几年我们见证了众多人文社会学科，在众人的努力下，能以更亲近的语言，更新颖的形式推广这些需要经年累月消化的知识。那么，我们回首，会发现胡台丽不但是个先行者，甚至很多的时候，是她一个人走出来的。</p>
 <p>​譬如正在撰写博士论文时，将当时的田野笔记转化成作品〈媳妇入门〉，竟获得“第一届”时报文学奖的小说佳作。人类学的田野经验，与虚构小说的界线，居然被她一脚跨了出去。台湾文学数十年来时有争辩的文类问题，当时她就以兼顾思辨与文学的文体，将学术、小说、散文、报导文学的界线抹除。更难能可贵在于，她并非有意挑战界线，玩弄形式，仅仅以书写本身，给台湾文学留下一个至今难以比拟的书写。</p>
