Update VOCUS 2022-05-13 patch

--- a/_posts/2022-05-12-VOCUS-以天使之名-南丁格爾.html
+++ b/_posts/2022-05-12-VOCUS-以天使之名-南丁格爾.html
@@ -10,20 +10,9 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 
 <h3 class="draft-block draft--h3" name="header-2b6kr">「護理是什麼？護理是來自上帝的呼召，值得一個人窮其一生的無悔投入。」</h3>
 <div class="draft-block draft--p left">「提燈天使」，南丁格爾（Florence Nightingale，1820－1910），5月12日知名壽星。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:4296px" class="image-block-prerender" data-src="https://images.vocus.cc/5c18aa5e-7f4c-4783-aef5-b844b0871b63.jpg" data-width="4296" data-height="2417" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/5c18aa5e-7f4c-4783-aef5-b844b0871b63.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">以己身肉體、有限資源捍衛普世蒼生的眾天使，在新冠肺炎持續遍地肆虐，全球確診總病例數即將突破五億一千九百萬例（<span style="font-weight: bold; ">若以國家人口排名，目前累積的確診者已超越美國總人口，擠身世界第三大國</span>）的當下，<span style="font-weight: bold; ">「護理師」，毫無疑問，也毋須多言，正是上帝、佛祖、真主、各神祉所差遣至人間救苦救難的守護者</span>，沒有護理師的犧牲奉獻，肺炎病毒可能就此成為「滅絕」全人類的兇手，但<span style="font-weight: bold; ">為了拯救受肺炎所侵害的患者，卻有許多護理師默默付出了至高的代價：寶貴的性命！如同耶穌基督一般……</span></div>
 <div class="draft-block draft--p left">談到「護理師」綻放慈愛光輝的原點，我們就不得不提到被譽為是所有<span style="font-weight: bold; ">「護理師之母」的南丁格爾女士。</span></div>
-<div class="draft--imgFloat draft-block"><div><div style="height:655px" class="image-block-prerender" data-src="https://images.vocus.cc/aaa1e26f-bca7-4579-88ab-e68c03a1598c.jpg" data-width="655" data-height="981" data-position="float"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgFloat draft-block"><img src="https://images.vocus.cc/aaa1e26f-bca7-4579-88ab-e68c03a1598c.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">南丁格爾誕生於托斯卡納大公國的佛羅倫斯（Florence，今義大利佛羅倫斯），有著大英帝國富裕世家的顯赫背景，從小更是人人稱羨的千金名媛。雙親除了高薪聘請家教老師前來傳授各國語言與藝術文化課程外，南丁格爾舉家還經常盛裝出席各種專為金字塔頂端富豪們所舉辦的慈善活動與奢華晚宴；但不同於沉溺酒池肉林的交際花，南丁格爾總覺得自己有限的人生，實在不應終日浪費在宴會沙龍之上，尤其賓主盡歡，人去樓空過後，始終讓她萌生一股枉費此生的茫然與無奈。</div>
 <div class="draft-block draft--p left">某一天的深夜，四周寂然無聲的寧靜時分......</div>
