--- a/_posts/2022-05-12-VOCUS-政治-不食肉糜.html
+++ b/_posts/2022-05-12-VOCUS-政治-不食肉糜.html
@@ -8,23 +8,17 @@ tags: blog
 author: 蘇 遇
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1500px" class="image-block-prerender" data-src="https://images.vocus.cc/b7048b1c-e68b-459f-8dea-9f95ee011be8.jpg" data-width="1500" data-height="999" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / 總統府</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/b7048b1c-e68b-459f-8dea-9f95ee011be8.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / 總統府</figcaption></div>
 <h3 class="draft-block draft--h3" name="header-e3vgt">蔡英文總統在臉書發文表示「防疫團隊成績也算相當好」。</h3>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">醫院</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">總統可能不知道現在醫院的急診室都已經不是急診室了，急診室都是要大排長龍的存在了，既然急診室都大排長龍了，醫護人員自然也是閒不得的，試問指揮官說的量能沒問題要再增加專責病房的一句又在哪裡，政府不管在哪方面始終都沒有聽到勞工或是基層的聲音，醫院這種資方的聲音倒是非常聽得進去，你真的覺得目前狀況說這樣的稱讚是合適的時機嗎 ? 我是覺得不太恰當啦。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">快篩</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">今年花了一堆錢買給友邦資助快篩，台灣可以幫忙這樣很好，但是否能夠多關照人民的需要，你把東西給別人然後自己人民不是那樣的重要，反倒變成人民需要時才在想辦法或是限制購買的困擾，然後賣人民快篩100元，買給友邦的單價卻不到100元，這樣匪夷所思的事情實在前所未見，人民納稅禿通都給你們拿去作人情拚門面，說實在話以前民進黨反對的金援外交到底現在在哪邊，前陣子還在資源友邦金錢後也被斷交的事件，終究只會淪為笑柄流傳世間。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">合理性</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">我們就事論事之後才會有所意見，網路上充斥著各種不合理的言論在為政府辯解，人民愛排隊、貪小便宜與囤貨的言論通通出現，說著把快篩讓給需要的人不要買一堆放在家裏面，說一句中肯的話，當你確診時就是不能出門購買快篩先買起來哪裡有錯誤的點，事實是政府無法供應足夠的快篩給予人民，還要人民自掏腰包我們都沒有怨言了，還在怪一堆老人排隊怎樣的一堆意見，防患於未然我想政府是完全不懂得字要如何書寫，只會宣傳著醫院人手足夠、輕症非常安全、快點開放邊境讓大家來台灣看見世界之最，真正的人民是如何害怕染疫的風險，你們好像視而不見，說著安全但一堆孕婦小孩老人不斷地消失不見，然後您在網路宣傳防疫的豐功偉業，是否太過偏頗了一點。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">面對疫情不斷的變化與政府的棄守，我相信人民只能靠自己保護與生活，沒有人希望有這種結果，但政府或許也只能旁觀束手無策的接受，如果要共存何不像國外一樣脫掉口罩回歸正常生活，既然還戴著口罩就代表這病毒還是有可怕的地方需要防守，捉摸不定的政策與訴說，讓人民覺得共存是否是一件對的事情與該認同的結果，對我來說疫情之前會守住是因為人民的自律，跟政府的關係其實沒有太多直接的證據，我們減少出門、戴口罩與保持距離，比起每天報數字花一堆錢買不到BNT還有快篩的指揮中心我想民眾才是最大的功臣沒有之一，政府要自賣自誇那是你的事情，我想台灣人民才是這次的最佳模範生而不是政府的那些奇怪邏輯，不升三級不封城也是靠人民自律才能夠清零撐過疫情，反倒是政府放推讓現在變得處處都是瘟疫，這樣的政策轉變讓人民無法適應，只能希望不要太多人犧牲就行，政府說的死亡率，實際的離去數字更加恐怖無情。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
