--- a/_posts/2022-05-12-VOCUS-灣生看台灣歷史-逃亡者的天堂-明治篇.html
+++ b/_posts/2022-05-12-VOCUS-灣生看台灣歷史-逃亡者的天堂-明治篇.html
@@ -8,19 +8,17 @@ tags: blog
 author: 熬夜的便當（Ben &#38; Don）｜班與唐
 ---
 
-<div class="draft--imgNormal draft-block"><div><div style="height:1080px" class="image-block-prerender" data-src="https://images.vocus.cc/b0ee9ebd-0887-4065-a378-73acbeb0f121.png" data-width="1080" data-height="1080" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/b0ee9ebd-0887-4065-a378-73acbeb0f121.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">如果今天你被迫要離開「家鄉」，要回去其他人說的真正「家鄉」。你會有什麼感覺呢？​</div>
 <div class="draft-block draft--p left">​對灣生來說，戰爭結束之後的那幾年，就是突然被告知說，他們得離開熟悉的故鄉台灣，「回去」他人口中說的故鄉日本，看會下雪的國度長什麼樣子、富士山長什麼樣子。​</div>
 <div class="draft-block draft--p left">​可是，他們回到日本，看到的是戰後殘敗的景象，還感受到周圍傳來的異樣眼光，叫他們「台灣來的」。​</div>
 <div class="draft-block draft--p left">​這群「台灣來的」，確實因為他們身分的特殊性，保留他們對台灣與日本之間，有著特別的觀點跟情感。​</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-210b4">什麼是灣生</h2>
 <div class="draft-block draft--p left">灣生，指的是日治時期出生在台灣的日本人，並非他們不熱愛台灣或不認同台灣是自己的故鄉，止不過殖民體制的關係，使得同一個台灣島上的不同族群，看事情的切面會有落差。​</div>
 <div class="draft-block draft--p left">​灣生竹中信子在系列著作《日本女人在台灣 — — 日治台灣生活史》，節選了從明治、大正到昭和時期以來，台灣民間發生的各種趣聞。​</div>
 <div class="draft-block draft--p left">​雖說節選的角度，多少反映了她的日本人身分，跟台灣人解讀的觀點不太一樣。​</div>
 <div class="draft-block draft--p left">不過，竹中信子的書還是幫忙補足了官方看不到的視角，像是記錄到早期來台灣的女性性工作者，還有社會對女性性工作態度的反思等等。​</div>
 <div class="draft-block draft--p left">​其中在明治時期篇章，她介紹了一名特別的社會主義提倡者 — — 神川松子。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-2lf52">台灣是逃亡者的天堂</h2>
 <div class="draft-block draft--p left">神川松子在日本國內是提倡社會主義，以及倡導婦女權益的女性。​</div>
 <div class="draft-block draft--p left">​原本神川松子與台灣沒有太多牽連，但是在 1908 年日本發生了「赤旗事件」之後，包含神川松子在內的社會主義人士被逮捕。​</div>
@@ -35,9 +33,8 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">​竹中信子在書中說，曾有機會與神川松子的女兒通話，得知在丈夫眼中的神川松子，是個怎樣的人物。​</div>
 <blockquote class="draft-block draft--blockquote">你母親一點也不溫柔，沒有女人味，不會幫我披衣服，每次主菜花不到十分鐘就快快進書房讀書。</blockquote>
 <div class="draft-block draft--p left">​這段是真愛的告白吧。​</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">書中還有描述明治時期的其他面向，想知道更多的話，歡迎去看我最新的影片：灣生竹中信子看台灣歷史 — — 《日本女人在台灣》明治篇</div>
-<div class="embed-block-prerender" data-url="https://youtu.be/SS9iFesgvdg"></div>
+<iframe src="https://youtube.com/embed/SS9iFesgvdg" width="720px" height="360px"></iframe>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">我是臺灣歷史主題的小說創作者，喜愛分享歷史、文學小知識給大家！</div>
 <div class="draft-block draft--p left">歡迎訂閱我的 <a href="https://www.youtube.com/channel/UCG-GytKfJ_VJHdrzVCs32Yg" target="_blank" class="draft--a">Youtube 頻道「熬夜的便當」</a>以及 <a href="https://www.instagram.com/pan.yutang/" target="_blank" class="draft--a">IG pan.yutang</a> 得到更多新的歷史小故事喔！</div>
