--- a/_posts/2022-05-12-VOCUS-政治-積極染疫.html
+++ b/_posts/2022-05-12-VOCUS-政治-積極染疫.html
@@ -8,24 +8,18 @@ tags: blog
 author: 蘇 遇
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/76f71ae8-9efb-4694-9011-1f413e9e94d6.jpg" data-width="1280" data-height="853" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / pixabay</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/76f71ae8-9efb-4694-9011-1f413e9e94d6.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / pixabay</figcaption></div>
 <h2 class="draft-block draft--h2" name="header-6srfj">物競天擇正在上演中。</h2>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">群體免疫</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">群體免疫跟積極染疫是兩件完全不同的事情，他說的是指人或動物群體中的很大比例對傳染病獲得免疫力，使得其他沒有免疫力的個體因此受到保護而不被傳染，擁有抵抗力的個體的比例越高，易感個體與受感染個體間接觸的可能性便越小，在個體間傳播的疫病感染鏈就容易切斷，終至疫病結束廣泛傳播、發病人數大量減少、流行病轉為地方病或消失，進而達到群體免疫。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">在台灣很多人或是政府官員與社群媒體不斷傳播現在共存的邏輯，對傳染病獲得免疫並且發病人數大量減少這件事情根本沒有發生，反而是越來越多人確診並且都有死亡的機率，我們的疫苗覆蓋率真的足夠了嗎 ? 如此大規模感染前期被犧牲的是否就是沒有免疫力的個體，如果真的是群體免疫是否應該保護沒有打疫苗或高風險族群在這場大規模染疫的共存中免受到死亡的危害呢。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">懂得人都懂</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">但我其實非常不懂，每個人的個體上的差異都是不相同的，染疫的程度也不一定都是輕微的表現程度，也可能會有併發或是其他的因素導致快速毀滅，這些都會成為染疫的風險，也當然打疫苗不是不會被傳染而是比較大機率會是無症狀或很輕微，但既然都說是機率了，賭錯邊的時候就沒有後悔的選項可以選，我懂就是現在還是很有風險，除非不小心染疫否則我也不想遭受這種罪，如果一個運氣不好害到自己也害到身邊的很多接觸來源。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">群體免疫的方法</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">分為兩種，第一種為疫苗，但疫苗的方法是有條件限制的，且重點是病毒不能常態性突變，還有就是疫苗是要絕對有效的存在才能夠達成這個願望，至於另外一種就是自然免疫，也就是物競天擇的遊戲，有些人認為根本沒有足夠的科學證據證明這方法的可靠性及可實踐性，更有人說這個方法不道德且犧牲許多人性命，且一旦達到群體免疫，雖會有較少的新發病例、較少死亡，但並不表示病毒消失，且由於免疫力不能維持終身，在你體弱時依舊能夠對你發起攻擊，綜觀情況我會認為疫苗才是絕對的解決良方與議題。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">民進黨推選的候選人說著積極的染疫我想就是再說自然群體免疫吧，除非沒有死亡的威脅，只要存在於致死率就會是拿自己的生命還有家人的賭下去，因為是機率所以對我來說就是兩種結果而已，但更多的是後遺症可能也會跟著你，腦霧或是你無法知道病毒會攻擊哪裡還有會併發甚麼事情，不是我要說的很可怕，我要說的是能避免掉不必要的麻煩就能夠安心，沒有人會想故意染疫還達到那個不道德的自然全體免疫的邏輯，只是很遺憾的是這是政府正在做的事情，告訴你死亡率只有0.2%而已不用擔心，但你會發現死的都是老百姓而不是上面的官員與有錢人的事情，因為他們的資源絕對比起等看醫生或是被趕回家的人還要來的豐富與100%的部會死亡機率，高低的分區。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
