--- a/_posts/2022-05-12-INMEDIA-港鐵邀鐵路迷羅先生拍mv-唱-東鐵過海真的很興奮.html
+++ b/_posts/2022-05-12-INMEDIA-港鐵邀鐵路迷羅先生拍mv-唱-東鐵過海真的很興奮.html
@@ -10,9 +10,10 @@ author: 獨媒報導
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/0207111%20%281%29_122.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>港鐵東鐵綫過海段<a href="https://www.inmediahk.net/node/政經/東鐵綫過海段515開通-陳帆稱繁忙時段金鐘站將有「吉車」載客">將於周日通車</a>，去年在屯馬綫通車時接受傳媒訪問、唱出改編歌詞「屯馬開通真的很興奮」的鐵路迷羅先生，應港鐵邀請參與官方二創歌曲《東鐵過海真的很興奮》的MV。他在MV中重現當日受訪時的造型，並唱出「紅磡接通港島超興奮  為搭首班車我唔願瞓」。</p>
 <p>《東鐵過海真的很興奮》一曲改編自《綠袖子》，港鐵今日傍晚公布MV，邀請了歌手鄭融、運動員謝影雪、藝人楊偲泳和李司棋、節目主持「肥腸」徐浩昌、KOL雞丁及鐵路迷羅先生（羅哲琛）演出。在MV中，鄭融率先現身唱出「紅館睇show真的很興奮」，之後再由不同嘉賓唱出「做鏡仔Fans又有咩問題」、「遲吓入U 返City好近」、「愉快結識到書展女神」和「期望出Pool脫毒唔自困」等歌詞，串連東鐵綫各站。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/fxdpEb" title="Screenshot (12)"><img src="https://live.staticflickr.com/65535/52068383074_15e4cdb003_z.jpg" width="640" alt="Screenshot (12)" /></a></p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3owKf6" title="Screenshot (6)"><img src="https://live.staticflickr.com/65535/52068153836_d6fb72d86c_z.jpg" width="640" alt="Screenshot (6)" /></a></p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/JWwJGQ" title="Screenshot (3)"><img src="https://live.staticflickr.com/65535/52068153786_e2ed22ec25_z.jpg" width="640" alt="Screenshot (3)" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/h65M22" title="PR-22-037-3"><img src="https://live.staticflickr.com/65535/52067546347_5319d9d370_b.jpg" width="1024" alt="PR-22-037-3" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/i4u8P5" title="PR-22-037-4"><img src="https://live.staticflickr.com/65535/52069072055_367fe862f7_b.jpg" width="1024" alt="PR-22-037-4" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/62ta6D" title="PR-22-037-6"><img src="https://live.staticflickr.com/65535/52068821454_a1c2e52b62_b.jpg" width="1024" alt="PR-22-037-6" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/60889B" title="PR-22-037-5"><img src="https://live.staticflickr.com/65535/52068590271_2ca0ccbf1e_b.jpg" width="1024" alt="PR-22-037-5" /></a></p>
 <p>羅先生為MV的「彩蛋嘉賓」，壓軸出場的他重現當日受訪時的造型，穿著紅色短袖T-Shirt、長褲、頸掛卡片套及背著背囊，唱出「紅磡接通港島超興奮  為搭首班車我唔願瞓  要有本尊見證才合襯」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/D191s0" title="Screenshot (8)"><img src="https://live.staticflickr.com/65535/52068163178_594516cb57_z.jpg" width="640" alt="Screenshot (8)" /></a></p>
 <p><strong>林鄭周六將出席過海段通車儀式</strong></p>
