--- a/_posts/2022-05-12-PQ-台北市議員發起-快篩互助-應援團-苗栗縣與新北市政治人物接續響應.html
+++ b/_posts/2022-05-12-PQ-台北市議員發起-快篩互助-應援團-苗栗縣與新北市政治人物接續響應.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3d467598-1152x768_461017251446.jpg" alt="" class="wp-image-101133" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3d467598-1152x768_461017251446.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3d467598-1152x768_461017251446-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3d467598-1152x768_461017251446-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>政治人物發起「快篩互助應援團」已正式上線。圖為家用快篩試劑／圖：中央社檔案照片。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3d467598-1152x768_461017251446.jpg" alt="" class="wp-image-101133" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3d467598-1152x768_461017251446.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3d467598-1152x768_461017251446-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3d467598-1152x768_461017251446-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>政治人物發起「快篩互助應援團」已正式上線。圖為家用快篩試劑／圖：中央社檔案照片。</figcaption></figure></div>
 
 
 
