--- a/_posts/2022-05-13-VOCUS-亮光的起點-在-世界語-呼喊愛情.html
+++ b/_posts/2022-05-13-VOCUS-亮光的起點-在-世界語-呼喊愛情.html
@@ -9,7 +9,7 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 ---
 
 <div class="draft-block draft--p left"><span style="font-style: italic; ">本文原刊載在《幼獅文藝》2021 年 7 月號</span></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:422px" class="image-block-prerender" data-src="https://images.vocus.cc/21352f5a-91d9-4b50-a8ae-2d0c5430215f.jpg" data-width="422" data-height="600" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/21352f5a-91d9-4b50-a8ae-2d0c5430215f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">鄧慧恩著作的小說《亮光的起點》，以台籍博物學家王雨卿的一生，貫穿 1920–1930 年代的世代青年，曾有過追逐美夢的短暫時光。劇情是一段淒美的愛情故事，讀者見證王雨卿用溫暖的革命，跨越族群與階級障礙，與日人小操結合，然而得到幸福後，劇情將角色帶回現實，王雨卿殞落，而小操面對戰爭與政權轉換的衝擊。</div>
 <div class="draft-block draft--p left">《亮光的起點》用浪漫的筆調，為一段世代的衰落傾訴故事，以日治時期為背景的題材而言不算陌生，不過《亮光的起點》有另一個重要元素貫穿作品：世界語（Esperanto），切中那一世代人尋覓的答案。</div>
 <div class="draft-block draft--p left">世界語曾經掀起一陣熱潮，在大正民主時期傳進日本，轉而流傳到臺灣人的眼界。日本的的世界語協會曾呼告，要以世界語作為「普羅列塔利亞解放的武器」，可想見臺灣青年熱烈擁抱世界語的緣故。青年在世界語的理念中，感受到破除階級與族群障礙的可能，閱讀多國書籍，吸收更多外國資訊。</div>
