--- a/_posts/2022-05-13-VOCUS-政治-指揮官的動怒.html
+++ b/_posts/2022-05-13-VOCUS-政治-指揮官的動怒.html
@@ -8,28 +8,21 @@ tags: blog
 author: 蘇 遇
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1024px" class="image-block-prerender" data-src="https://images.vocus.cc/892d217e-f88e-42b9-8d59-8b1ce65e2467.jpg" data-width="1024" data-height="683" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / 中央社</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/892d217e-f88e-42b9-8d59-8b1ce65e2467.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / 中央社</figcaption></div>
 <h3 class="draft-block draft--h3" name="header-d8si5">陳時中今日罕見動怒，蔡英文總統今天才開防疫會議下達指令。</h3>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">快速</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">速度會是搶救生命與健康的最關鍵的事情，但陳時中指揮官卻不這麼認為，他認為新北市長侯友宜建議將所有「快篩陽性視同確診」不外乎就是想要快速確診？快速投藥？快速隔離治療？我想問這樣不好嗎 ? 最嚴重的地方首長關心人民想要建請中央快點實施，卻被擋在門外指揮官如此真的是對的嗎 ?</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">人權</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">陳時中指揮官表示如果快速隔離治療，會限制人身自由，尤其快篩陽性會有7%至15%的人是偽陽性，事後在法律上行政上處分是否過當，那既然提到人身自由，那你當初在清零政策的時候是否就有詢問過被隔人的民眾，那些自費的防疫旅館的規範與法條是否又牴觸憲法的保障人民自由這件事情，你跟我說不能限制人身自由是否太過於苛刻你之前的所有，那當然對於我來說快篩如果是陽性快點接受治療我覺得對民眾本身是好的，不用再等PCR的時間出了任何差錯，如果在急診室外面排隊錯過的黃金最佳時機那又有誰負責呢 ?</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">我想只是本身有慢性疾病或是其他原因才導致離去的可能性最大。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">偽陽性</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">7%至15%的人是偽陽性這樣的機率對我來說並不算高，假設</span>1萬個人快篩陽性，其中就會有700個人是沒有確診，但另外的9300人可以不需要等待PCR結果盡快接受治療與隔離還有醫生與政府的追蹤我想這是一件很好的事情，畢竟有些事情是越快越好拖下去就看影多少人是死於等待的時期，等不到通知就離去。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">指數型海嘯</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">當你的快篩陽性的數量暴增，超越你PCR的量能，沒辦法快出的給出答案時，快篩陽性即是確診就是一個很好的做法，雖然準確度大約落在90%，但卻可以即時的給出不管是政府或是民眾當下快速能夠應對，畢竟誰也不知道如果真的確診會發生怎樣的事件，早點知道早點能夠安排甚至多休息或是其他醫療行為，而不是等三天然後可能發生遺憾的事件，如果量能不足或許還要超過三天，幸運的是解隔離才拿到確診通知書，不幸運的可能就會公布在記者會上面。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">終究下個禮拜指揮官陳時中就會同意這個做法與意見，五看來就是小小的傲嬌與不想面對，你提出來我就先反對，之後再改個名子照著做就沒有問題了，只是目前新北確實是最嚴重的地區，然而指揮中心的拒絕是否太過於果斷與狠心在裡面，我以為政府應該對於災情最嚴重的縣市給予更多資源，但現在卻時常口出驚人之語或者與重災區的指揮官鬧口嘴，我想或許應該不是因為他們不是民進黨的執政區域與黨員的關係，但如果真的是如此就真的是政治凌駕於專業與人民的生命安全，雖然指揮官對於桃園、台南與高雄的確和藹可親與親力親為的一些，但或許只是我判斷錯誤才會有這些想法出現，天佑台灣，人民絕對沒有被分級與政府絕對沒有偏心的行為出現。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
