--- a/_posts/2022-05-13-VOCUS-晴-與-雨.html
+++ b/_posts/2022-05-13-VOCUS-晴-與-雨.html
@@ -11,7 +11,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <blockquote class="draft-block draft--blockquote">三分線上的穿楊百步；演講台上的侃侃而談，</blockquote>
 <blockquote class="draft-block draft--blockquote">熱音大會的主力唱將；紀念校刊的統籌主筆，</blockquote>
 <blockquote class="draft-block draft--blockquote">一個是帶來熱情歡樂；一個是捎來筆墨風雅，</blockquote>
-<div class="draft--imgNormal draft-block"><div><div style="height:1400px" class="image-block-prerender" data-src="https://images.vocus.cc/dd070dfa-79fe-440c-a647-918de3d8e9db.jpg" data-width="1400" data-height="840" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">http://davidanthony31.blogspot.com/2015/05/sun-showers.html</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/dd070dfa-79fe-440c-a647-918de3d8e9db.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">http://davidanthony31.blogspot.com/2015/05/sun-showers.html</figcaption></div>
 <h2 class="draft-block draft--h2" name="header-c3h3g"><span style="font-weight: bold; ">「晴」與「雨」，像分隔浩瀚蒼穹，亦如劈開萬里江海一般，在青翠無憂的校園裡流傳著。</span></h2>
 <div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">男同學帶些忌妒地說：等「雨」勢過了，天才會放「晴」，所以「晴」只能永遠跟在「雨」的後面；可這邊的女同學呢？她們隱約透露出一絲醋（敵）意，「雨」？下雨天多不方便啊，撐傘？溼衣？哼，還不若我們的「晴」，看了就是讓人心曠神怡！尤其校際比賽結束後，跟對手交換球衣的聯誼時刻，褪去7號背心，露出結實上身胸膛的一霎那…瞧！「晴」天多麼「香」啊！</div>
@@ -32,7 +32,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">「我就是『帕特羅克洛斯』（Patroclus）。」</span></blockquote>
 <div class="draft-block draft--p left">「雨」，雲淡風輕地說著，獨自望著遠方。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:500px" class="image-block-prerender" data-src="https://images.vocus.cc/88cd7182-d495-4a06-80d8-b19cdaff7d4e.jpg" data-width="500" data-height="500" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://soundcloud.com/elkuu/sunshower</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/88cd7182-d495-4a06-80d8-b19cdaff7d4e.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://soundcloud.com/elkuu/sunshower</figcaption></div>
 <h3 class="draft-block draft--h3" name="header-21tpd">「老同學，我帶孫子來運動，順便看看你啊。」</h3>
 <div class="draft-block draft--p left">有點冰冷又顯著慘白的療養院長廊，數位時鐘對這裡的住民幾乎沒有意義。我把佈滿皺紋的手，搭在目光呆滯的老友肩上，<span style="font-weight: bold; ">李禹勤</span>，是，李禹勤，我還記得他的本名。開玩笑，<span style="font-weight: bold; ">叫了三年的「晴」</span>，只有考試或頒獎時，我們這群死黨才會噁心地稱呼全名，風雲人物嘛，運動健將嘛，熱音才子嘛，光用想的，就恨到曾母暗沙去了…</div>
 <div class="draft-block draft--p left">但可惜啊，真的是……</div>
