--- a/_posts/2022-05-13-VOCUS-謝謝-再會-悅誠廣場.html
+++ b/_posts/2022-05-13-VOCUS-謝謝-再會-悅誠廣場.html
@@ -9,7 +9,7 @@ author: Hiroshi LIM
 ---
 
 <div class="draft-block draft--p left">新聞說，悅誠廣場八月底就會結束營業。真的是不意外。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/08f7448d-065e-4daa-981c-92de7b6b1f8e.jpg" data-width="1280" data-height="720" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/08f7448d-065e-4daa-981c-92de7b6b1f8e.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">版上也不少人各種嘲諷悅誠廣場，甚至說連聽都沒聽過，漢神巨蛋或左營新光三越還比較好逛云云。但聽在我這在地居民的耳裡，很不是滋味。</div>
 <div class="draft-block draft--p left">從大統新世紀到悅誠廣場，其定位都是「社區型購物中心」，若拿漢神巨蛋或左營新光三越來比較，我個人是覺得沒什麼道理可言，因為本來就是不同層級的商場。</div>
 <div class="draft-block draft--p left">－</div>
