--- a/_posts/2022-05-13-VOCUS-活在香港睇電視-平台合縱勢已成.html
+++ b/_posts/2022-05-13-VOCUS-活在香港睇電視-平台合縱勢已成.html
@@ -8,4 +8,42 @@ tags: blog
 author: 關間聞
 ---
 
-<p><br></p>
+<p>去年4月20日，香港YouTube Channel圈子有所謂「四台聯播」。事隔一年，筆者希望溫習一下發展趨勢，尤其當時觀察到的「跨平台（網絡 + 電視）聯播互動」(1)，今天如何開枝散葉，順帶漫談一下當今香港「睇電視」這回事。</p>
+<p>撰文前，有點掙扎。筆者沒有任何電盈（00008.HK）股票，也沒有收取酬金，為相關電視台及YouTube Channel作軟銷推廣，但字裡行間展示的立場，很難不招惹批評質疑。一來筆者對舊有大台「嗤之以鼻」，少有運用同理心諒解之；另一方面，卻對新進免費電視頻道及YouTube Channel百般維護，偏見甚濃。但既然已選邊站，就顧不得面面俱圓了。</p>
+<img src="https://images.unsplash.com/photo-1588473158757-afdb399558d6">
+<p>攀談之前，先咬文嚼字，睇一睇「睇」這個字。</p>
+<h3>睇電視 文縐縐</h3>
+<p>早年曾以為「睇」屬於為粵語口語創造的俗字，對應語體文「看、望、視」等正字。後來中文老師提醒，「睇」遠在《楚辭》已經出現，在古舊文章裡間有身影，並非近代才特意造出來，例如：</p>
+<p>既含睇(2)兮又宜笑，子慕予兮善窈窕 《楚辭·九歌·山鬼》</p>
+<p>仰睇天路，俯促鳴絃 《閒情賦》（陶淵明）</p>
+<p>「睇」既是輕微斜視，亦有注視之意，頗為吻合我們日常睇電視的實況：有時專注，有時望一望。</p>
+<h3>娛樂聯盟 投桃報李</h3>
+<p>TVB近年被批評把製作重心轉移到內地，失了港味，此舉也許迫不得已。串流媒體／平台興起，YouTube Channel持續發展，廣告收入下跌(3)……多重夾擊下，免費電視早已被視作前景堪虞，TVB另謀高就，合理，悉隨尊便，筆者沒有興致一起操心。只是另一「弱台」ViuTV處境相同，前景理應比根基較久遠的TVB更差，它如何處理困境，甚至錄得盈利(4)？筆者不諳財務及營運策略分析，故此只關注我觀察到的現象，就是電視與YouTube Channel之間的合作互動。</p>
+<p>筆者眼中所謂「跨平台（網絡+電視）聯播互動」，意指雙方人員，尤其藝人，互相crossover。近期實際例子，可以留意ViuTV如何「推銷」其女子組合Collar，並娛樂訪談節目《爆谷一周》如何與YouTube Channel《HEBEFACE》(5)互相「客串」。</p>
+<p>這種互動是否ViuTV突圍之秘笈？個人認為效益還未如斯強大，但雙方對合作互動如此興致勃勃，起碼不會是一塊避之若浼的絆腳石。事實上，聯播互動正在擴大彼此的觀眾群，培育「雙重效忠」的粉絲。既把某些網絡內容「帶入屋」，也協助免費電視吸引本來已經離開的觀眾回歸，聯乘效應長期累積，不容忽視。</p>
+<h3>爆谷與女團</h3>
+<p>要掌握上述互動為何值得留意，不如先回想很多很多年前，若果要為新出道歌手爭取曝光機會，父執輩年代，會到《歡樂今宵》亮相高歌。80年代，會到TVB《勁歌金曲》、商業二台或RTHK第二台亮相或受訪。今時今日？TVB當然不會為女子組合Collar提供舞台？於是她們就現身《小薯茄》，參加綜藝遊戲(6)，展現其青春頑皮個性，然後現身《志雲頻道》接受訪問(7)，展現截然不同面貌，談成長講家庭。斧鑿背後，窺見ViuTV頗為重視網絡頻道。上述YouTube Channels的影響力，雖未能企及上世紀的《勁歌金曲》及叱吒903，但明顯在過去一兩年持續上升（也許受惠於因疫症「困宅」在家的狀況），成為備受重視的節目／曝光渠道。</p>
+<p>其實對此趨勢稍有認識的人，早已留意在2020年中，部份Mirror成員已多次在《小薯茄》中亮相。去年底及今年初，《小薯茄》部份成員亦有參與ViuTV的《膠戰Season2》及客串演出劇集《IT狗》。</p>
+<p>這種互動早已頻繁出現，近期極致例子是娛樂訪談節目《爆谷一周》。該節目在第5集訪問「四台聯播」的始作俑者《試當真》，但只能視為一次單向行動，未涉互動。直到第8集探訪《HEBEFACE》，聯播互動就渾然天成了：《爆谷一周》主持谷德昭曾參與多齣港產電影編、導、演工作，《HEBEFACE》的Channel主持人則熱衷／沉迷於重尋港產電影拍攝場地。於是一位覓地，另一位認證，電視節目與YouTube Channel各自播出詳盡訪尋記錄及對話(8)(9)。雙方影片既有部份相同，亦各有獨特內容，互相補充，可謂一次「珠聯璧合」的聯播互動。</p>
+<p>假如閣下是「電視精」加上「網絡迷」，就知道上述互動，不過冰山一角而已，實況比筆者描述更多姿多采。</p>
+<p>然而，這麼趣味盎然的互動，難度TVB沒有企圖涉獵，分一杯羹嗎？我手上沒有TVB的藍圖計劃，但有一個案例可堪玩味。去年TVB開設了一個YouTube Channel，名為《食腦 BrainStorming》(10)，以趣味短片為主。若非網友提起，我根本不察覺它的存在。非常明顯，頻道點擊率甚低，YouTube演算法根本不作推介；其次，我懷疑TVB有否為此投放足夠資源，例如製作團隊；與及有否付費推廣這個YouTube Channel(11)？也許TVB根本不懂經營YouTube Channel；也許他們懂得，卻志不在香港網絡。</p>
+<p>透過這案例，我們看見跨平台聯播互動這回事，不是電視台隨便豎立起一個Channel，就會自動發生茁壯。另一方面，TVB是否願意仿傚「弱台」ViuTV，與一眾頻道建立一種「投桃報李」的合作關係？我很懷疑。</p>
+<h3>網絡電視 渾然一體</h3>
+<p>走筆至此，頭腦清醒的朋友應該會發現我似乎離題：我究竟在談論「睇電視」或「上網睇片」？</p>
+<p>筆者要承認，睇電視與上網睇片，界線開始模糊。現時TVB及ViuTV皆可在官方網站，重溫部份電視節目，部份節目甚至已經在官方網站實時直播。依據此趨勢，舊有的電視機（及天線）會逐漸退出歷史舞台，把睇電視交給平版電腦及手機：將來一個browser會打開三個分頁，一邊等待Channel直播，另一邊重溫昨晚的電視台節目，第三個分頁就留給電影／劇集串流平台。</p>
+<p>這裡不單是換了器材硬件，連世界觀也更換了。免費電視台由昔日無可匹敵的媒體霸主、資訊把關人，變成「只不過」其中一個Channel。日後免費電視台對我的影響或潛移默化，不一定比《志雲頻道》或《小薯茄》強。再進一步，一個早已習慣在網絡世界尋找資訊的香港人，不會再輕易相信傳統媒體的新聞報導，尤其一眾「懷疑」被收編了的舊媒體。</p>
+<p>Channel由我選，不滿就棄之如敝屣，多麼瀟灑！但瀟灑的基礎似乎有危機，不甚穩固。不能使用YouTube進行宣傳的領導人上台後，會向YouTube報復嗎？網絡上稍為欣欣向榮的現狀、「弱台」成功挑戰大台的戲碼、聯播互動的繽紛多元，會否曇花一現，化為烏有？</p>
+<p>YouTube日後未必被完全封鎖，只是避不了長城乍現、封號處處（這組句子需要頓號），只剩下《聲生不息》這類節目可以順利瀏覽。筆者沒有興致睇國內如何「保育廣東歌」，只希望睇見Mirror亂入《Black Mirror》(12)，生生猛猛地互相叫板。</p>
+<p>註/延伸閱讀：</p>
+<p>(1) 《網絡天地 早已改弦易轍 - 由毛記電視到「四台聯播」》https://vocus.cc/article/608bfdc7fd8978000111755c</p>
+<p>(2) 有課本讀作「弟」，不讀作「體」。</p>
+<p>(3) 《TVB免費電視蝕逾5億 廣告收入跌七成》 (明報財經，26/8/2020) https://finance.mingpao.com/fin/instantf/20200826/1598448763833/tvb免費電視蝕逾5億-廣告收入跌七成</p>
+<p>(4) 《電盈旗下ViuTV首賺錢 MIRROR刺激廣告收益 末期息增兩成》 (明報，25/2/2022) https://news.mingpao.com/pns/經濟/article/20220225/s00004/1645727423528/電盈旗下viutv首賺錢-mirror刺激廣告收益-末期息增兩成</p>
+<p>(5) 《HEBEFACE》 https://www.youtube.com/c/HEBEFACE/about</p>
+<p>(6) 《薯茄PartyGame EP22 COLLAR首次玩綜藝！》 (YouTube) https://youtu.be/VTrdxxzHiaE</p>
+<p>(7) 《Stephen．傾 EP 100：COLLAR》 (YouTube) https://youtu.be/MsJTFbnOgSY</p>
+<p>(8) 《龍咁威2 皇母瑤池村報案室在哪裡？由他親自認證 !! | 港產片朝聖地〈龍咁威2之皇母娘娘呢?〉Ft. 谷德昭》 (YouTube) https://youtu.be/GIhY4JkXDes</p>
+<p>(9) 《谷德昭導演也來了!! 我要上〈爆谷一周〉了．與谷導重訪〈行運超人〉的場景 | 港產片朝聖地〈行運超人〉(FEAT. 谷德昭)》 (YouTube) https://youtu.be/lYv3Tp0F-Rc</p>
+<p>(10) 《食腦 BrainStorming》 https://www.youtube.com/c/BrainStormingOfficial/about</p>
+<p>(11) 《「食腦三子」開業一年未見成績 繼續獲力捧到底係咩原因？》 (香港01，9/4/2022) https://www.hk01.com/sns/article/756973</p>
+<p>(12) 《〈CHILL CLUB推介榜 年度推介21／22〉ERROR ＋MIRROR＋MC $oHo ＆KidNey 話你知組合進化史！6膠突入膠到暈！》 (YouTube) https://youtu.be/hs-bfZhH8aU</p>
